# GDITK-WebSite

./: .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 1561177cf435_news.py  1e5544e7791c_add_order_column_to_department.py  2a1847e1055d_all.py  32428620e7dd_all.py  77b7d8487f9f_news.py  80e735329595_news.py  c3d5019cb0bd_change_create_time_for_news.py
backend/src/: config.py  database.py  exceptions.py  main.py  start.py
backend/src/appeal/: models.py  repository.py  routers.py  schemas.py
backend/src/documents/: models.py  repository.py  router.py  schemas.py
backend/src/faculty/: models.py  repository.py  routers.py  schemas.py
backend/src/gallery/: models.py  repository.py  routers.py  schemas.py
backend/src/images/: router.py
backend/src/news/: models.py  repository.py  router.py  schemas.py
backend/src/repository/: base.py
backend/src/schedules/: models.py  repository.py  router.py  schemas.py
backend/src/specialties/: models.py  repository.py  router.py  schemas.py
backend/src/universty/: models.py  repository.py  routers.py  schemas.py
backend/src/users/: auth.py  dependencies.py  models.py  repository.py  routers.py  schemas.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: Admin.styled.tsx  App.styled.tsx  main.tsx
frontend/src/consts/: adaptive.tsx  colors.tsx  index.tsx
frontend/src/routers/: AllRoutes.tsx  helpers.ts
frontend/src/services/: request.ts
nginx/: default.conf
(+107 files in other folders)
